# dbt-core-northwind

./: README.md  pyproject.toml
ddl_tabelas/: tabelas.sql
northwind/: dbt_project.yml
northwind/seeds/: region.csv
